syntax = "proto3";

option go_package = "cellphone/protos/go;cellphone";

import "class.proto";

// Cellphone

message GetCellphoneByIdRequest {
    int64 id = 1;
}

message FetchSingleRequest {
    int64 id = 1;
}

message BulkInsertRequest {
    repeated Cellphone phones = 1;
}


// Provider

message GetProviderByIdRequest {
    int64 id = 1;
}

message GetProviderByNameRequest {
    string name = 1;
}

message GetCountRequest {
    int64 id = 1;
}

message InsertProviderRequest {
    Provider provider = 1;
}

message DeleteProviderRequest {
    int64 id = 1;
}

message UpdateProviderRequest {
    Provider provider = 1;
}
